web/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first
spec:
  replicas: 3
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
        - name: apple-app
          image: hashicorp/http-echo
          args:
            - "-text=SCAND"
---
apiVersion: v1
kind: Service
metadata:
  name: first-svc
spec:
  ports:
    - port: 5678
  selector:
    app: first
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second
spec:
  replicas: 3
  selector:
    matchLabels:
      app: second
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
        - name: apple-app
          image: hashicorp/http-echo
          args:
            - "-text=HOME"
---
apiVersion: v1
kind: Service
metadata:
  name: second-svc
spec:
  ports:
    - port: 5678
  selector:
    app: second
