web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
    - hosts:
        - scand.workfusion.com
      secretName: scand-secret
  rules:
    - host: scand.workfusion.com
      http:
        paths:
          - path: /scand
            pathType: Prefix
            backend:
              service:
                name: scand-svc
                port:
                  number: 8080
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: home-svc
                port:
                  number: 8080
          - path: /first
            pathType: Prefix
            backend:
              service:
                name: first-svc
                port:
                  number: 8080
